# MiSTer_PICO-8

./: .gitattributes  .gitignore  CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  version.txt
.github/workflows/: build.yml  diff_harness.yml  dispatch_db.yml  refresh_release.yml
PICO-8/: .gitkeep  PICO-8
Scripts/: Install_PICO-8.sh  Install_pico-8.sh  pico-8.sh
_Console/: PICO-8.rbf  PICO-8_20260407.rbf  PICO-8_20260408.rbf  PICO-8_20260409.rbf  PICO-8_20260417.rbf
_Other/: PICO-8_20260421.rbf  PICO-8_20260427.rbf  PICO-8_20260616.rbf
docs/PICO-8/: README.md
fpga/: PICO8.qsf  PICO8.qws  PICO8.sv  build_id.v  files.qip  jtag.cdf
fpga/db/: .cmp.kpt  PICO8.(0).cnf.cdb  PICO8.(0).cnf.hdb  PICO8.(1).cnf.cdb  PICO8.(1).cnf.hdb  PICO8.(10).cnf.cdb  PICO8.(10).cnf.hdb  PICO8.(100).cnf.cdb  PICO8.(100).cnf.hdb  PICO8.(101).cnf.cdb  PICO8.(101).cnf.hdb  PICO8.(102).cnf.cdb  PICO8.(102).cnf.hdb  PICO8.(103).cnf.cdb  PICO8.(103).cnf.hdb  PICO8.(104).cnf.cdb  PICO8.(104).cnf.hdb  PICO8.(105).cnf.cdb  PICO8.(105).cnf.hdb  PICO8.(106).cnf.cdb  PICO8.(106).cnf.hdb  PICO8.(107).cnf.cdb  PICO8.(107).cnf.hdb  PICO8.(108).cnf.cdb  PICO8.(108).cnf.hdb  PICO8.(109).cnf.cdb  PICO8.(109).cnf.hdb  PICO8.(11).cnf.cdb  PICO8.(11).cnf.hdb  PICO8.(110).cnf.cdb  PICO8.(110).cnf.hdb  PICO8.(111).cnf.cdb  PICO8.(111).cnf.hdb  PICO8.(112).cnf.cdb  PICO8.(112).cnf.hdb  PICO8.(113).cnf.cdb  PICO8.(113).cnf.hdb  PICO8.(114).cnf.cdb  PICO8.(114).cnf.hdb  PICO8.(115).cnf.cdb  (+279 more)
fpga/incremental_db/compiled_partitions/: PICO8.db_info  PICO8.root_partition.cmp.ammdb  PICO8.root_partition.cmp.hbdb.cdb  PICO8.root_partition.cmp.hbdb.hdb  PICO8.root_partition.cmp.hdb  PICO8.root_partition.cmp.rcfdb  PICO8.root_partition.map.cdb  PICO8.root_partition.map.dpi  PICO8.root_partition.map.hbdb.cdb  PICO8.root_partition.map.hbdb.hb_info  PICO8.root_partition.map.hbdb.hdb  PICO8.root_partition.map.hbdb.sig  PICO8.root_partition.map.hdb  PICO8.root_partition.map.kpt  PICO8.rrp.hdb  PICO8.rrs.cdb
fpga/output_files/: PICO8.asm.rpt  PICO8.done  PICO8.fit.rpt  PICO8.fit.summary  PICO8.flow.rpt  PICO8.jdi  PICO8.map.rpt  PICO8.map.smsg  PICO8.map.summary  PICO8.pin  PICO8.rbf  PICO8.sta.rpt  PICO8.sta.summary
fpga/rtl/: pico8_cart_loader.sv  pico8_video_reader.sv  pico8_video_timing.sv  pico8_video_top.sv  pll.v
fpga/rtl/pll/: pll_0002.v
games/PICO-8/: PICO-8  bios.p8  boot.rom  pico8_daemon.sh
src/: BUILDING.md  bios.cpp  cart_browser.h  compat_format.h  mister_main.cpp  native_video_writer.c  native_video_writer.h  synth.h  test_trace.h
src/bindings/: lua.h
src/lol_shim/lol/: color  engine.h  file  math  msg  narray  pegtl  transform  utils  vector
src/lol_shim/lol/algo/: suffix_array
src/lol_shim/lol/private/: pop_macros.h  push_macros.h
src/lol_shim/lol/sys/: init.h
src/pico8/: api.cpp  bios.p8  cart.cpp  cart.h  code.cpp  gfx.cpp  memory.h  private.cpp  render.cpp  sfx.cpp  vm.cpp  vm.h
tools/: z8headless.cpp
tools/conformance/: README.md  fix32_math.p8  gen_goldens.ps1  gen_matrix.py  goldens.txt  m_cstore_rt.p8  m_fillp_cam_clip.p8  m_fillp_int.p8  m_ifdo.p8  m_map_size.p8  m_map_tline.p8  m_math.p8  m_memory.p8  m_p8scii.p8  m_pal.p8  m_print.p8  m_reset.p8  m_rnd_ord.p8  m_shapes.p8  m_sprites.p8  m_strings.p8  m_tostr.p8  mech_check.p8  rnd_seq.p8  run_conformance.sh
tools/harness/: README.md  advance_input.txt  analyze_scan.py  compare_decode.py  decode_diff_shrinko.py  run_decode_ours.sh  run_scan.sh  scan_decode_ours.sh  scan_library.sh  trace_scan.sh  trace_worker.sh
tools/render_diff/: DESIGN.md  FINDINGS.md  _mechcheck_driven.p8  batch_dump_gen.py  batch_dump_official.ps1  batch_dump_z8.sh  batch_gen.py  batch_official.ps1  batch_play_official.ps1  batch_play_z8.sh  batch_seq_gen.py  batch_seq_official.ps1  batch_seq_z8.sh  batch_win_gen.py  batch_win_official.ps1  batch_win_z8.sh  batch_z8.sh  compare_render.py  fbdiff.py  fullres_montage.py  gen_wrapper.py  montage.py  pixel_window_classify.py  rank_triptychs.py  seq_analyze.py
